--- a/portfolio.html
+++ b/portfolio.html
@@ -133,9 +133,10 @@
     </main>
 <footer class="footer link">
     <div class="container">
-    <a href="./index.html" class="footer-logo link">Web<span class="footer-logo-color">Studio</span></a>
-    <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth
-        solutions.</p>
+        <a href="./index.html" class="footer-logo link footer-item">Web<span class="footer-logo-color">Studio</span></a>
+        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
+            growth
+            solutions.</p>
     </div>
 </footer>
 </body>
